Created the gig model.

--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -204,9 +204,20 @@
     <Compile Include="Migrations\201903280404391_InitialModel.Designer.cs">
       <DependentUpon>201903280404391_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903280420597_CreateGigTable.cs" />
+    <Compile Include="Migrations\201903280420597_CreateGigTable.Designer.cs">
+      <DependentUpon>201903280420597_CreateGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903280437309_OverrideConventionsGigsAndGenres.cs" />
+    <Compile Include="Migrations\201903280437309_OverrideConventionsGigsAndGenres.Designer.cs">
+      <DependentUpon>201903280437309_OverrideConventionsGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -290,6 +301,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201903280404391_InitialModel.resx">
       <DependentUpon>201903280404391_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903280420597_CreateGigTable.resx">
+      <DependentUpon>201903280420597_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903280437309_OverrideConventionsGigsAndGenres.resx">
+      <DependentUpon>201903280437309_OverrideConventionsGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
