Populate Genres table.

--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201903280437309_OverrideConventionsGigsAndGenres.Designer.cs">
       <DependentUpon>201903280437309_OverrideConventionsGigsAndGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903280444379_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201903280444379_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201903280444379_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903280437309_OverrideConventionsGigsAndGenres.resx">
       <DependentUpon>201903280437309_OverrideConventionsGigsAndGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903280444379_PopulateGenresTable.resx">
+      <DependentUpon>201903280444379_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
