--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Migrations\201903280444379_PopulateGenresTable.Designer.cs">
       <DependentUpon>201903280444379_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903280558364_AddForeignKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201903280558364_AddForeignKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201903280558364_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -317,6 +321,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903280444379_PopulateGenresTable.resx">
       <DependentUpon>201903280444379_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903280558364_AddForeignKeyPropertiesToGig.resx">
+      <DependentUpon>201903280558364_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
