--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -205,11 +205,14 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FolloweesController.cs" />
+    <Compile Include="Controllers\FollowingsController.cs" />
     <Compile Include="Dtos\AttendanceDto.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Dtos\FollowingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -241,11 +244,24 @@
     <Compile Include="Migrations\201904291655493_AddAttendance.Designer.cs">
       <DependentUpon>201904291655493_AddAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904291805288_AddFollowing.cs" />
+    <Compile Include="Migrations\201904291805288_AddFollowing.Designer.cs">
+      <DependentUpon>201904291805288_AddFollowing.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904291807006_AddFollowing2.cs" />
+    <Compile Include="Migrations\201904291807006_AddFollowing2.Designer.cs">
+      <DependentUpon>201904291807006_AddFollowing2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904291835185_AddFollowing3.cs" />
+    <Compile Include="Migrations\201904291835185_AddFollowing3.Designer.cs">
+      <DependentUpon>201904291835185_AddFollowing3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Attendance.cs" />
+    <Compile Include="Models\Following.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -316,6 +332,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Gigs\Create.cshtml" />
+    <Content Include="Views\Followees\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -354,6 +371,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904291655493_AddAttendance.resx">
       <DependentUpon>201904291655493_AddAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904291805288_AddFollowing.resx">
+      <DependentUpon>201904291805288_AddFollowing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904291807006_AddFollowing2.resx">
+      <DependentUpon>201904291807006_AddFollowing2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904291835185_AddFollowing3.resx">
+      <DependentUpon>201904291835185_AddFollowing3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
