--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -337,6 +337,7 @@
     <Content Include="Views\Gigs\Create.cshtml" />
     <Content Include="Views\Followees\Index.cshtml" />
     <Content Include="Views\Artist\Following.cshtml" />
+    <Content Include="Views\Gigs\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
