--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -334,7 +334,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Gigs\Create.cshtml" />
+    <Content Include="Views\Gigs\GigForm.cshtml" />
     <Content Include="Views\Followees\Index.cshtml" />
     <Content Include="Views\Artist\Following.cshtml" />
     <Content Include="Views\Gigs\Mine.cshtml" />
